overflow fixed

--- a/resources/sass/_site.scss
+++ b/resources/sass/_site.scss
@@ -4,7 +4,7 @@ body {
 
 .full-height {
   height: calc(100vh - 6.6rem);
-  overflow: hidden;
+  overflow: auto;
   background-color: $milk;
 }
 
